feat: add seckill reservation assist and full-stack UX/ops polish
Ship P0 reservation fire path end-to-end, tighten connector/charts/runtime, and improve frontend seckill/login flows with product positioning docs.

Co-authored-by: Cursor <cursoragent@cursor.com>